# MAS

./: CMakeCache.txt  CMakeLists.txt  Makefile  ReadMe.md  cmake_install.cmake
code/: CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
code/Agents/: ActiveAgent.cpp  ActiveAgent.h  Agent.cpp  Agent.h  CMakeLists.txt  Makefile  cmake_install.cmake
code/Misc/: Bid.cpp  Bid.h  CMakeLists.txt  Logger.cpp  Logger.h  Makefile  cmake_install.cmake
code/Misc/arguments/arguments/: addarg.cpp  arg.cpp  arguments.h  arguments.ih  arguments1.cpp  clear.cpp  data.cpp  destructor.cpp  extendargs.cpp  processargs.cpp  processoptions.cpp
code/Misc/arguments/option/: add.cpp  destructor.cpp  option.h  option.ih  option1.cpp  value.cpp
code/Misc/arguments/options/: add.cpp  destructor.cpp  find.cpp  newoption.cpp  operatorassign2.cpp  option1.cpp  option2.cpp  option3.cpp  options.h  options.ih  swap.cpp
code/Simulation/: CMakeLists.txt  Makefile  Simulation.cpp  Simulation.h  cmake_install.cmake
docs/: index.md  old.md
