add_library(Misc SHARED
            arguments/arguments/arguments1
            arguments/arguments/addarg
            arguments/arguments/arg
            arguments/arguments/clear
            arguments/arguments/data
            arguments/arguments/destructor
            arguments/arguments/extendargs
            arguments/arguments/processargs
            arguments/arguments/processoptions
            arguments/option/add
            arguments/option/destructor
            arguments/option/option1
            arguments/option/value
            arguments/options/add
            arguments/options/destructor
            arguments/options/find
            arguments/options/newoption
            arguments/options/operatorassign2
            arguments/options/option1
            arguments/options/option2
            arguments/options/option3
            arguments/options/swap
            Bid.cpp
            Logger.cpp)